--- a/back/package.json
+++ b/back/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@koa/cors": "^5.0.0",
     "koa": "^2.15.3",
+    "koa-body": "^6.0.1",
     "koa-router": "^12.0.1",
     "pg": "^8.11.5",
     "pg-hstore": "^2.3.4",
